@@ -11,6 +11,7 @@ octsympy 2.6.1-dev
     so they are slower than native floating-point implementations.
 
           euler
+          bernoulli
 
   * `vpa` now warns of low-precision on non-numbers strings with decimals
     such as `vpa('cos(0.1)')`.  See "help vpa" for details.
@@ -26,6 +27,8 @@ octsympy 2.6.1-dev
   * Improve `function_handle` support by supporting more functions.
 
   * Fixes for several bugs mentioning "immutable matrices".
+
+  * `bernoulli` now works with array inputs.
 
   * Various bug fixes and documentation updates.
 
